Fixed index.html container issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ headerSubtitle: ""
     <div class="row row-cols-1 row-cols-md-2 g-4">
         {% for post in site.posts %}
         <div class="col">
-            <div class="card mb-3" style="width: 540px !important;">
+            <div class="card mb-3" style="">
                 <div class="card-body">
                     {%if post.thumbnail %}
                     <img src="{{ post.thumbnail }}" class="img-thumbnail rounded-start " alt="{{ page.thumbnail-alt }}">
