--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ headerSubtitle: ""
 <div class="alert alert-danger">
 
     <h1>Please Note this website is Working In Progress.</h1>
-    <p>feel free to contribute to the website! You can find our github repo at <a
+    <p>feel free to contribute to the website! You can find our github repo at <a class="text-break"
             href="https://github.com/LivingForChrist/LivingForChrist.github.io"
             target="_blank">https://github.com/LivingForChrist/LivingForChrist.github.io</a></p>
     <p>Some articles and authors are temporary. So Don't expect them to be there if you save them Examples. Anything from
